[gd_scene load_steps=12 format=2]

[ext_resource path="res://Resources/Textures/Items/bullet-1Hi-Res.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Entities/Enemies/Missile.gd" type="Script" id=2]
[ext_resource path="res://Resources/Textures/FX/EnemyLight.png" type="Texture" id=3]
[ext_resource path="res://Scripts/FX/Particles.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.5, 23.5 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
scale_random = 1.0
scale_curve = SubResource( 4 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.543478, 0.235227 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2000.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 160.0
damping_random = 1.0
scale = 10.0
scale_random = 1.0
scale_curve = SubResource( 6 )

[node name="Missile" type="KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
collision_layer = 2
collision_mask = 81
script = ExtResource( 2 )
expl_scale = 0.2

[node name="Light2D" type="Light2D" parent="."]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
energy = 2.66

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 25, -3 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.207843, 0.207843, 0.207843, 1 )
position = Vector2( 25, -2.95121 )
rotation = 1.5708
scale = Vector2( 0.592, 1.33 )
texture = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 65, -2.5 )
rotation = 1.5708
amount = 20
local_coords = false
process_material = SubResource( 2 )
script = ExtResource( 4 )

[node name="ExplosionParticles" type="Particles2D" parent="."]
emitting = false
amount = 100
lifetime = 0.4
explosiveness = 0.97
process_material = SubResource( 7 )
script = ExtResource( 4 )

[node name="DeleteTimer" type="Timer" parent="."]

[connection signal="timeout" from="DeleteTimer" to="." method="_on_Timer_timeout"]
